@@ -10,6 +10,10 @@ Version 1.5100: Sun Mar 22 2015
 - Fixed enabling of warnings.
   https://rt.cpan.org/Ticket/Display.html?id=79898
   Thanks to atourbin@cpan.org for the bug report and patch.
+- Fixed a division by zero error for malformed mbox files that start with a
+  newline.
+  https://rt.cpan.org/Ticket/Display.html?id=69469
+  Thanks to vadz@cpan.org for the bug report.
 
 Version 1.5002: Sun Aug 9 2009
 - Disabled the grep interface, which has had some tricky bugs that I don't
